get rid of www fix links to external sites, fixed bad comments in css

--- a/templates/site-index-template.html
+++ b/templates/site-index-template.html
@@ -88,7 +88,8 @@
 
 		// Small screens
 		@media only screen {
-		} /* Define mobile styles */
+		}
+		/* Define mobile styles */
 
 		@media only screen and (max-width: 40em) {
 			h1 {
@@ -114,28 +115,35 @@
 			#links {
 				margin: 2em auto 0 auto;
 			}
-		} /* max-width 640px, mobile-only styles, use when QAing mobile issues */
+		}
+		/* max-width 640px, mobile-only styles, use when QAing mobile issues */
 
 		// Medium screens
 		@media only screen and (min-width: 40.063em) {
-		} /* min-width 641px, medium screens */
+		}
+		/* min-width 641px, medium screens */
 
 		@media only screen and (min-width: 40.063em) and (max-width: 64em) {
-		} /* min-width 641px and max-width 1024px, use when QAing tablet-only issues */
+		}
+		/* min-width 641px and max-width 1024px, use when QAing tablet-only issues */
 
 		// Large screens
 		@media only screen and (min-width: 64.063em) {
-		} /* min-width 1025px, large screens */
+		}
+		/* min-width 1025px, large screens */
 
 		@media only screen and (min-width: 64.063em) and (max-width: 90em) {
-		} /* min-width 1025px and max-width 1440px, use when QAing large screen-only issues */
+		}
+		/* min-width 1025px and max-width 1440px, use when QAing large screen-only issues */
 
 		// XLarge screens
 		@media only screen and (min-width: 90.063em) {
-		} /* min-width 1441px, xlarge screens */
+		}
+		/* min-width 1441px, xlarge screens */
 
 		@media only screen and (min-width: 90.063em) {
-		} /* min-width 1441px and max-width 1920px, use when QAing xlarge screen-only issues */
+		}
+		/* min-width 1441px and max-width 1920px, use when QAing xlarge screen-only issues */
 	</style>
 </head>
 <body>
@@ -145,10 +153,10 @@
 			$sitenav
 		</ul>
 		<div id="links">
-			<span class="myButton"><a class="outbound" href="http://twitter.com/kevingoldsmith"><span class="genericon genericon-twitter"></span></a></span>
-			<span class="myButton"><a class="outbound" href="http://www.linkedin.com/in/goldsmith"><span class="genericon genericon-linkedin"></span></a></span>
-			<span class="myButton"><a class="outbound" href="http://instagram.com/kevingoldsmith"><span class="genericon genericon-instagram"></span></a></span>
-			<span class="myButton"><a class="outbound" href="http://www.youtube.com/kevingoldsmith"><span class="genericon genericon-youtube"></span></a></span>
+			<span class="myButton"><a class="outbound" href="https://twitter.com/kevingoldsmithh"><span class="genericon genericon-twitter"></span></a></span>
+			<span class="myButton"><a class="outbound" href="https://www.linkedin.com/in/goldsmith/"><span class="genericon genericon-linkedin"></span></a></span>
+			<span class="myButton"><a class="outbound" href="https://instagram.com/kevingoldsmith/"><span class="genericon genericon-instagram"></span></a></span>
+			<span class="myButton"><a class="outbound" href="https://www.youtube.com/user/kevingoldsmith/"><span class="genericon genericon-youtube"></span></a></span>
 			<span class="myButton"><a class="outbound" href="https://github.com/kevingoldsmith"><span class="genericon genericon-github"></span></a></span>
 		</div>
 	</div>
