--- a/templates/music-template.html
+++ b/templates/music-template.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=contain">
-    <title>music: Kevin Goldsmith</title>
+    <title>Music: Kevin Goldsmith</title>
     <meta name="description" content="Music created by Kevin Goldsmith">
     <meta name="author" content="Kevin Goldsmith">
     <meta name="google-site-verification" content="6-e5GrTPsmDpSGk6vICFdLGxj9buwsS1qiaxZKKj3Qw" />
