--- a/templates/talk-index-template.html
+++ b/templates/talk-index-template.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>$title</title>
-    <meta name="description" content="talks by $author">
+    <meta name="description" content="a list of talks, panels and workshops by $author">
     <meta name="author" content="$author">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="google-site-verification" content="$googsiteverification" />
