added new json files for my resume, and interviews. The resume JSON doesn't follow the JSONResume spec totally, it incorporates some things from the (non-mainline) 1.0 version and it adds other things not in that spec, but in my resume.
fixed bad twitter URL om the index page

--- a/templates/resume-template.html
+++ b/templates/resume-template.html
@@ -221,7 +221,7 @@
 			<section class="page-section" id="contact">
 				<h2 class="section-title">contact</h2>
 				<div class="section-content">
-					<div id="resume-email" class="center"><table cellpadding="0" cellspacing="0"><tr><td><i>kevin<!-- blah --></i></td><td>@</td><td><i>unitcircle.</i><!-- blah --></td><td><!--blah--><i>com</i></td></tr></table></div>
+					<div id="resume-email" class="center"><table cellpadding="0" cellspacing="0"><tr><td><i>kevin<!-- blah --></i></td><td>.goldsmith</td><td>@</td><td><i>gmail.</i><!-- blah --></td><td><!--blah--><i>com</i></td></tr></table></div>
 					<div id="resume-weblink"><a href="https://kevingoldsmith.com/">https://kevingoldsmith.com/</a></div>
 				</div>
 			</section>
