--- a/templates/site-index-template.html
+++ b/templates/site-index-template.html
@@ -31,9 +31,9 @@
     <meta name="twitter:creator" content="@kevingoldsmith"/>
     <meta name="twitter:title" content="Kevin Goldsmith's home page"/>
     <meta name="twitter:description" content="Kevin Goldsmith's personal site: resume, writing, list of talks, music and photography."/>
-    <meta name="twitter:image" content="http://www.kevingoldsmith.com/img/me-camera@2x.jpg"/>
-    <meta name="twitter:domain" content="www.kevingoldsmith.com"/>
-    <meta name="twitter:url" content="http://www.kevingoldsmith.com/">
+    <meta name="twitter:image" content="http://kevingoldsmith.com/img/me-camera@2x.jpg"/>
+    <meta name="twitter:domain" content="kevingoldsmith.com"/>
+    <meta name="twitter:url" content="https://kevingoldsmith.com/">
 
     <!-- Google tags -->
     <meta itemprop="name" content="Kevin Goldsmith">
@@ -153,7 +153,7 @@
 			$sitenav
 		</ul>
 		<div id="links">
-			<span class="myButton"><a class="outbound" href="https://twitter.com/kevingoldsmithh"><span class="genericon genericon-twitter"></span></a></span>
+			<span class="myButton"><a class="outbound" href="https://twitter.com/kevingoldsmith"><span class="genericon genericon-twitter"></span></a></span>
 			<span class="myButton"><a class="outbound" href="https://www.linkedin.com/in/goldsmith/"><span class="genericon genericon-linkedin"></span></a></span>
 			<span class="myButton"><a class="outbound" href="https://instagram.com/kevingoldsmith/"><span class="genericon genericon-instagram"></span></a></span>
 			<span class="myButton"><a class="outbound" href="https://www.youtube.com/user/kevingoldsmith/"><span class="genericon genericon-youtube"></span></a></span>
