some refactoring (still need to do date formating in the conference pages), some bug fixing. now up to production credits on the resume

--- a/templates/resume-template.html
+++ b/templates/resume-template.html
@@ -302,15 +302,7 @@
 				<div class="section-content">
 					<p class="biggertext">Complete list of talks is at <a href="https://kevingoldsmith.com/talks">https://kevingoldsmith.com/talks</a></p>
 					<ul class="simple-list">
-						<li><span class="talk-title"><a href="http://blog.kevingoldsmith.com/2017/05/13/my-talk-and-interview-from-jax-2017-in-mainz-germany/" class="outbound">Fail Fast, Fail Safe... Succeed! (Opening Keynote)</a></span>, <a class="outbound" href="https://jax.de/">JAX 2017</a>, May 2017, Mainz, Germany</li>
-						<li><span class="talk-title"><a href="https://www.kevingoldsmith.com/talks/fail-fast-fail-smart-succeed.html">Embracing Failure</a></span>, <a href="https://www.appbuilders.ch/">App Builders Switzerland</a>, April 2016, Zürich, Switzerland</li>
-						<li><span class="talk-title"><a href="https://www.kevingoldsmith.com/talks/fail-fast-fail-smart-succeed.html">Failing Up: Creating a Failsafe Environment</a></span>, <a class="outbound" href="http://tomtom.com/">Tomtom Internal Product Conference</a>, November 2015, Amsterdam, Netherlands</li>
-						<li><span class="talk-title"><a href="https://www.kevingoldsmith.com/talks/apportioning-monoliths.html">Apportioning Monoliths (Opening Keynote)</a></span>, <a class="outbound" href="http://www.mobiconf.org/">Mobiconf</a>, October 2015, Kraków, Poland</li>
-						<li><span class="talk-title"><a href="https://www.kevingoldsmith.com/talks/culture-leads-everything-else-follows.html">Culture Leads, Everything Else Follows (Closing Keynote)</a></span>, <a class="outbound" href="http://www.abilitypartner.se/konferenser_kurser/webbstrategidagarna-offentlig-sektor/">WEBBOS</a>, September 2015, Stockholm, Sweden</li>
-						<li><span class="talk-title"><a href="https://www.kevingoldsmith.com/talks/building-a-strong-engineering-culture.html">Building a Strong Engineering Culture</a></span> - Keynote, <a class="outbound" href="http://qconshanghai.com/">QCon China</a>, October, 2014, Shanghai, China</li>
-						<li><span class="talk-title"><a href="https://www.kevingoldsmith.com/talks/building-a-strong-engineering-culture.html">Building a Strong Engineering Culture</a></span>, <a href="http://embrainz.com/">Embrainz 2014</a>, May 2014, Oslo, Norway</li>
-						<li><span class="talk-title"><a href="https://www.kevingoldsmith.com/talks/culture-leads-everything-else-follows.html">Culture Leads, Everything Else Follows</a></span>, <a href="http://sudweb.fr/2014/">Sudweb 2014</a>, May 2014, Toulouse, France</li>
-						<li><span class="talk-title"><a href="https://www.kevingoldsmith.com/talks/building-a-strong-engineering-culture.html">Building a Strong Engineering Culture</a></span>, Keynote talk: BBC Develop 2013, November 2013, London, UK</li>
+						$keynote_list
 					</ul>
 				</div>
 			</section>
@@ -318,11 +310,7 @@
 				<h2 class="section-title">publishing credits</h2>
 				<div class="section-content">
 					<ul class="simple-list">
-                        <li><span class="credit-title"><a class="outbound" href="http://www.adobe.com/devnet/author_bios/kevin_goldsmith.html">Multiple articles: Adobe Developer Network</a></span>, authored several articles between January 2010 and March 2011 on using the Pixel Bender image processing language.</li>
-                        <li><span class="credit-title">Webworks: e-zines: Explore On-Line Magazine Design</span>, Martha Gill, Rockport Publishers, 2000: Unit Circle E-Zine featured showcasing my web design</li>
-                        <li><span class="credit-title">Inventor Mentor</span>, Josie Wernecke, Addison Wesley, 1994: color plates 27, 30, 37-40</li>
-                        <li><span class="credit-title">1994 Catalog</span>, Center for Creative Imaging, 1994: my images used to promote the courses.</li>
-                        <li><span class="credit-title">Open GL Programming Guide</span>, Mason Woo, Jackie Neider, Dave Shreiner, Addison Wesley, 1993: color plate 24</li>
+						$publication_list
 					</ul>
 				</div>
 			</section>
