finish generating resume page

--- a/templates/resume-template.html
+++ b/templates/resume-template.html
@@ -117,6 +117,9 @@
 			clear: both;
 		}
 
+		.honor-summary {
+			font-style: italic;
+		}
 
 		.simple-list li {
 			padding-bottom: .5em;
@@ -318,7 +321,7 @@
 				<h2 class="section-title">production credits</h2>
 				<div class="section-content">
 					<ul class="simple-list">
-						<li><span class="production-title">Moxy's Pirate Television Show</span>, 1994-5 season, Cartoon Network. Developed software animation tools used in the production</li>
+						$production_list
 					</ul>
 				</div>
 			</section>
@@ -326,8 +329,7 @@
 				<h2 class="section-title">honors</h2>
 				<div class="section-content">
 					<ul class="simple-list">
-						<li><span class="honor-title">Adobe Technology Summit 2011</span>, Program Committee Member and Software Engineering Track Chair. <em>Invited to take a leadership position for a company-wide internal Adobe technical conference with over 2000 attendees.</em></li>
-	                    <li><span class="honor-title">Siggraph 1995</span>, Moxy excerpts in <i>Computer Animation Festival</i> and <i>Electronic Theatre</i></li>
+						$honor_list
 					</ul>
 				</div>
 			</section>
