fixed a bug with the page title

--- a/templates/talk-page-template.html
+++ b/templates/talk-page-template.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>$title</title>
-    <meta name="description" content="Page describing the talk $title by $author" />
+    <meta name="description" content="information about the talk $talktitle by $author" />
     <meta name="author" content="$author" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="google-site-verification" content="$googsiteverification" />
@@ -29,7 +29,7 @@
 	</header>
 	<div id="content">
 		<div><a href="$talkroot">talks></a></div>
-		<h1 id="talktitle">$title</h1>
+		<h1 id="talktitle">$talktitle</h1>
 		$photo
 		<div id="description">
 			<div class="subheader">Description</div>
