--- a/templates/site-index-template.html
+++ b/templates/site-index-template.html
@@ -35,10 +35,6 @@
     <meta name="twitter:domain" content="kevingoldsmith.com"/>
     <meta name="twitter:url" content="https://kevingoldsmith.com/">
 
-    <!-- Google tags -->
-    <meta itemprop="name" content="Kevin Goldsmith">
-    <meta itemprop="description" content="Kevin Goldsmith&#39;s personal site: resume, writing, list of talks, music and photography.">
-
     <!-- Styling -->
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/genericons.css" />
@@ -146,17 +142,17 @@
 	</style>
 </head>
 <body>
-	<div id="header"><h1>Kevin Goldsmith</h1></div>
+	<div id="header"><h1><span itemprop="name">Kevin Goldsmith</span></h1></div>
 	<div id="menu">
 		<ul>
 			$sitenav
 		</ul>
 		<div id="links">
-			<span class="myButton"><a class="outbound" href="https://twitter.com/kevingoldsmith"><span class="genericon genericon-twitter"></span></a></span>
-			<span class="myButton"><a class="outbound" href="https://www.linkedin.com/in/goldsmith/"><span class="genericon genericon-linkedin"></span></a></span>
-			<span class="myButton"><a class="outbound" href="https://instagram.com/kevingoldsmith/"><span class="genericon genericon-instagram"></span></a></span>
-			<span class="myButton"><a class="outbound" href="https://www.youtube.com/user/kevingoldsmith/"><span class="genericon genericon-youtube"></span></a></span>
-			<span class="myButton"><a class="outbound" href="https://github.com/kevingoldsmith"><span class="genericon genericon-github"></span></a></span>
+			<span class="myButton"><a class="outbound" rel="me" itemprop="url" href="https://twitter.com/kevingoldsmith"><span class="genericon genericon-twitter"></span></a></span>
+			<span class="myButton"><a class="outbound" rel="me" itemprop="url" href="https://www.linkedin.com/in/goldsmith/"><span class="genericon genericon-linkedin"></span></a></span>
+			<span class="myButton"><a class="outbound" rel="me" itemprop="url" href="https://instagram.com/kevingoldsmith/"><span class="genericon genericon-instagram"></span></a></span>
+			<span class="myButton"><a class="outbound" rel="me" itemprop="url" href="https://www.youtube.com/user/kevingoldsmith/"><span class="genericon genericon-youtube"></span></a></span>
+			<span class="myButton"><a class="outbound" rel="me" itemprop="url" href="https://github.com/kevingoldsmith"><span class="genericon genericon-github"></span></a></span>
 		</div>
 	</div>
     
