added nav and main tags

--- a/templates/music-template.html
+++ b/templates/music-template.html
@@ -71,13 +71,13 @@
 <body>
     <header id="header">
         <div id="name"><a href="$siteroot">Kevin Goldsmith</a></div>
-        <div id="site-nav">
+        <hav id="site-nav">
             <ul>
                 $sitenav
             </ul>
-        </div>
+        </hav>
     </header>
-    <div id="content">
+    <main id="content">
         <div class="ut"><iframe class="ut youtube" src="//www.youtube.com/embed/Qw3YQL2Z_ZE?rel=0" frameborder="0" allowfullscreen></iframe></div>
         <h2>Solo Recordings (<a href="https://answerstoapril.com/">Answers to April</a>)</h2>
         <section id="A2ASoloReleases" class="release-box-list">
@@ -185,7 +185,7 @@
                 <li><a class="outbound" href="http://fourthdimensionapp.com/" target="_new">The Fourth Dimension</a> -  Drew Olbrich/Gilles Dezeustre, iPhone/iPad application, 2012 - Sound Design</li>
             </ul>
         </section>
-    </div>
+    </main>
     <footer>
         kevingoldsmith.com
     </footer>
