--- a/templates/photography-template.html
+++ b/templates/photography-template.html
@@ -51,15 +51,15 @@
 <!-- thanks to https://codepen.io/eksch/pen/xwdOeK for the page navigation code example (I had to tweak some)  -->
 	<header id="header">
         <div id="name"><a href="$siteroot">Kevin Goldsmith</a></div>
-		<div id="site-nav">
+		<nav id="site-nav">
 			<ul>
 				$sitenav
 			</ul>
-		</div>
+		</nav>
 	</header>
-	<div id="content">
+	<main id="content">
 	<iframe id="ifrm" src="https://photo.kevingoldsmith.com" style="border:none; width:100%"></iframe>
-	</div>
+	</main>
 	<footer id="footer">
 		kevingoldsmith.com
 	</footer>
