--- a/templates/resume-template.html
+++ b/templates/resume-template.html
@@ -237,7 +237,7 @@
 		</div>
 	</header>
 	<div id="content">
-		<div id="page-nav">
+		<nav id="page-nav">
 			<ul>
 				<li class="navigation active"><a href="#contact">contact</a></li>
 				<li class="navigation"><a href="#summary">summary</a></li>
@@ -250,8 +250,8 @@
 				<li class="navigation"><a href="#production">production credits</a></li>
 				<li class="navigation"><a href="#honors">honors</a></li>
 			</ul>
-		</div>
-		<div id="scrolled-content">
+		</nav>
+		<main id="scrolled-content">
 			<section class="page-section" id="headline">
 				<div class="section-content">
 					<div id="resume-mini-summary" class="headline">$headline</div>
@@ -334,7 +334,7 @@
 				</div>
 			</section>
 		</div>
-	</div>
+	</main>
 	<footer>
 		kevingoldsmith.com
 	</footer>
