--- a/templates/site-index-template.html
+++ b/templates/site-index-template.html
@@ -144,9 +144,11 @@
 <body>
 	<div id="header"><h1><span itemprop="name">Kevin Goldsmith</span></h1></div>
 	<div id="menu">
-		<ul>
-			$sitenav
-		</ul>
+		<nav>
+			<ul>
+				$sitenav
+			</ul>
+		</nav>
 		<div id="links">
 			<span class="myButton"><a class="outbound" rel="me" itemprop="url" href="https://twitter.com/kevingoldsmith"><span class="genericon genericon-twitter"></span></a></span>
 			<span class="myButton"><a class="outbound" rel="me" itemprop="url" href="https://www.linkedin.com/in/goldsmith/"><span class="genericon genericon-linkedin"></span></a></span>
