--- a/templates/talk-page-template.html
+++ b/templates/talk-page-template.html
@@ -21,13 +21,13 @@
 <body>
 	<header id="header">
         <div id="name"><a href="$siteroot">Kevin Goldsmith</a></div>
-		<div id="site-nav">
+		<nav id="site-nav">
 			<ul>
                 $sitenav
 			</ul>
-		</div>
+		</nav>
 	</header>
-	<div id="content">
+	<main id="content">
 		<div><a href="$talkroot">talks></a></div>
 		<h1 id="talktitle">$talktitle</h1>
 		$photo
@@ -45,7 +45,7 @@
 		</div>
 		$reactions
 		<!-- end #mainContent -->
-	</div>
+	</main>
 	<footer>
 		kevingoldsmith.com
 	</footer>
