--- a/templates/talk-index-template.html
+++ b/templates/talk-index-template.html
@@ -86,13 +86,13 @@
 <body>
 	<header id="header">
         <div id="name"><a href="$siteroot">Kevin Goldsmith</a></div>
-		<div id="site-nav">
+		<nav id="site-nav">
 			<ul>
                 $sitenav
 			</ul>
-		</div>
+		</nav>
 	</header>
-	<div id="content">
+	<main id="content">
 		<div id="map_wrapper">
 	    	<div id="map_canvas" class="mapping"></div>
 		</div>
@@ -122,7 +122,7 @@
 			</ul>
 		</section>
 	<!-- end #mainContent -->
-	</div>
+	</main>
 	<footer>
 		kevingoldsmith.com
 	</footer>
