added prefetch of dns, moved fonts out of css imports to improve load time

--- a/templates/site-index-template.html
+++ b/templates/site-index-template.html
@@ -10,6 +10,13 @@
     <meta name="google-site-verification" content="6-e5GrTPsmDpSGk6vICFdLGxj9buwsS1qiaxZKKj3Qw" />
     <link rel="canonical" href="https://kevingoldsmith.com" />
 
+    <!-- this looks like it is making things slower -->
+	<link rel="dns-prefetch" href="https://ajax.googleapis.com">
+	<link rel="dns-prefetch" href="https://fonts.gstatic.com">
+	<link rel="dns-prefetch" href="https://google-analytics.com">
+	<link rel="prefetch" href="https://fonts.googleapis.com/css?family=Didact+Gothic">
+	<link rel="prefetch" href="https://fonts.googleapis.com/css?family=Roboto+Slab">
+
     <!-- Facebook Open Graph tags -->
     <meta property="og:title" content="Kevin Goldsmith's home page"/>
     <meta property="og:type" content="profile"/>
@@ -36,6 +43,9 @@
     <meta name="twitter:url" content="https://kevingoldsmith.com/">
 
     <!-- Styling -->
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Didact+Gothic" />
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab" />
+
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/genericons.css" />
 	<style>
