--- a/templates/writing-template.html
+++ b/templates/writing-template.html
@@ -10,7 +10,14 @@
     <meta name="google-site-verification" content="6-e5GrTPsmDpSGk6vICFdLGxj9buwsS1qiaxZKKj3Qw" />
     <link rel="canonical" href="https://kevingoldsmith.com/writing.html" />
 
+    <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
+    <link rel="dns-prefetch" href="https://ajax.googleapis.com" />
+    <link rel="dns-prefetch" href="https://fonts.gstatic.com" />
+    <link rel="dns-prefetch" href="https://google-analytics.com" />
+
     <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Didact+Gothic" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab" />
     <link rel="stylesheet" href="css/main.css" />
 
     <!-- Google ownership links -->
