--- a/templates/music-template.html
+++ b/templates/music-template.html
@@ -10,7 +10,13 @@
     <meta name="google-site-verification" content="6-e5GrTPsmDpSGk6vICFdLGxj9buwsS1qiaxZKKj3Qw" />
     <link rel="canonical" href="https://kevingoldsmith.com/music.html" />
 
-    <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
+    <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
+    <link rel="dns-prefetch" href="https://ajax.googleapis.com" />
+    <link rel="dns-prefetch" href="https://fonts.gstatic.com" />
+    <link rel="dns-prefetch" href="https://google-analytics.com" />
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Didact+Gothic" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab" />
     <link rel="stylesheet" href="css/main.css" />
 
     <!-- Google ownership links -->
