--- a/templates/photography-template.html
+++ b/templates/photography-template.html
@@ -15,6 +15,13 @@
     <link rel="author" href="https://plus.google.com/+KevinGoldsmith"/>
     <link rel="publisher" href="https://plus.google.com/111904464094073716491" />
 
+    <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
+	<link rel="dns-prefetch" href="https://ajax.googleapis.com" />
+	<link rel="dns-prefetch" href="https://fonts.gstatic.com" />
+	<link rel="dns-prefetch" href="https://google-analytics.com" />
+
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Didact+Gothic" />
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab" />
     <link rel="stylesheet" href="css/main.css" />
 	<style type="text/css">
 		/* Common header elements, move to separate file? */
