--- a/templates/talk-page-template.html
+++ b/templates/talk-page-template.html
@@ -15,6 +15,13 @@
     <link rel="author" href="$googauthor"/>
     <link rel="publisher" href="$googpublisher" />
 
+    <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
+	<link rel="dns-prefetch" href="https://ajax.googleapis.com" />
+	<link rel="dns-prefetch" href="https://fonts.gstatic.com" />
+	<link rel="dns-prefetch" href="https://google-analytics.com" />
+
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Didact+Gothic" />
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab" />
     <link rel="stylesheet" href="../css/main.css" />
     <link rel="stylesheet" href="talkpages.css" />
 </head>
