fixed validation errors

--- a/templates/resume-template.html
+++ b/templates/resume-template.html
@@ -147,11 +147,11 @@
 			border-spacing: 0;
 		}
 
-// Small screens
+/* Small screens */
 @media only screen {
 	body { background-color: #FF0000; }
 } 
-// Define mobile styles
+/* Define mobile styles */
 
 @media only screen and (max-width: 40em) {
 	header {
@@ -191,13 +191,13 @@
 		padding: .5em .5em .5em .5em;
 	}
 }
-// max-width 640px, mobile-only styles, use when QAing mobile issues
+/* max-width 640px, mobile-only styles, use when QAing mobile issues */
 
-// Medium screens
+/* Medium screens */
 @media only screen and (min-width: 40.063em) {
 	body { background-color: #0000FF; }
 }
-// min-width 641px, medium screens
+/* min-width 641px, medium screens */
 
 @media only screen and (min-width: 40.063em) and (max-width: 64em) {
 	header {
@@ -210,13 +210,13 @@
 		padding: 0em 0em 0em .5em;
 	}
 }
-// min-width 641px and max-width 1024px, use when QAing tablet-only issues
+/* min-width 641px and max-width 1024px, use when QAing tablet-only issues */
 
-// Large screens
+/* Large screens */
 @media only screen and (min-width: 64.063em) {
 	body { background-color: #00AA00; }
 }
-// min-width 1025px, large screens
+/* min-width 1025px, large screens */
 
 @media only screen and (min-width: 64.063em) and (max-width: 90em) {
 	header {
@@ -229,13 +229,13 @@
 		padding: 0em 0em 0em .5em;
 	}
 } 
-// min-width 1025px and max-width 1440px, use when QAing large screen-only issues
+/* min-width 1025px and max-width 1440px, use when QAing large screen-only issues */
 
-// XLarge screens
+/* XLarge screens */
 @media only screen and (min-width: 90.063em) {
 	body { background-color: #CC0000; }
 }
-// min-width 1441px, xlarge screens
+/* min-width 1441px, xlarge screens */
 
 @media only screen and (min-width: 90.063em) {
 	#content {
@@ -246,7 +246,7 @@
 		padding: .5em .5em .2em .5em;
 	}
 } 
-// min-width 1441px and max-width 1920px, use when QAing xlarge screen-only issues
+/* min-width 1441px and max-width 1920px, use when QAing xlarge screen-only issues */
 
 	</style>
 </head>
