fix bad css comments

--- a/templates/site-index-template.html
+++ b/templates/site-index-template.html
@@ -91,11 +91,11 @@
 			padding: 4px 4px 9px 3px;
 		}
 
-		// Small screens
+		/* Small screens */
 		@media only screen {
 		}
+		
 		/* Define mobile styles */
-
 		@media only screen and (max-width: 40em) {
 			h1 {
 				font-size: 2.5em;
@@ -123,7 +123,7 @@
 		}
 		/* max-width 640px, mobile-only styles, use when QAing mobile issues */
 
-		// Medium screens
+		/* Medium screens */
 		@media only screen and (min-width: 40.063em) {
 		}
 		/* min-width 641px, medium screens */
@@ -132,7 +132,7 @@
 		}
 		/* min-width 641px and max-width 1024px, use when QAing tablet-only issues */
 
-		// Large screens
+		/* Large screens */
 		@media only screen and (min-width: 64.063em) {
 		}
 		/* min-width 1025px, large screens */
@@ -141,7 +141,7 @@
 		}
 		/* min-width 1025px and max-width 1440px, use when QAing large screen-only issues */
 
-		// XLarge screens
+		/* XLarge screens */
 		@media only screen and (min-width: 90.063em) {
 		}
 		/* min-width 1441px, xlarge screens */
