--- a/templates/talk-index-template.html
+++ b/templates/talk-index-template.html
@@ -88,7 +88,7 @@
         }
 
 	</style>
-	<!-- thanks to Ian Wright for the Mapping stuff https://wrightshq.com/playground/placing-multiple-markers-on-a-google-map-using-api-3/ -->
+	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
 </head>
 <body>
 	<header id="header">
@@ -135,67 +135,23 @@
 	</footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="../js/googleevents.js"></script>
+	<script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js" integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q==" crossorigin=""></script>
 	<script type="text/javascript">
-		jQuery(function($$) {
-		    // Asynchronously Load the map API
-		    // $$$$ gets escapted to a single $$ in string template
-		    var script = document.createElement('script');
-		    script.src = "https://maps.googleapis.com/maps/api/js?sensor=false&callback=initialize";
-		    document.body.appendChild(script);
-		});
+	    var map = L.map('map_canvas').setView([51.505, -0.09], 2);
+	    L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', { attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'}).addTo(map);
 
-		function initialize() {
-		    var map;
-		    var bounds = new google.maps.LatLngBounds();
-		    var mapOptions = {
-		        mapTypeId: 'roadmap'
-		    };
+	    // Multiple Markers
+	    var markers = [
+	        $markerlist
+	    ];
+	    // Info Window Content
+	    var infoWindowContent = [
+	        $infolist
+	    ];
 
-		    // Display a map on the page
-		    map = new google.maps.Map(document.getElementById("map_canvas"), mapOptions);
-		    map.setTilt(45);
-
-		    // Multiple Markers
-		    var markers = [
-		        $markerlist
-		    ];
-
-		    // Info Window Content
-		    var infoWindowContent = [
-		        $infolist
-		    ];
-
-		    // Display multiple markers on a map
-		    var infoWindow = new google.maps.InfoWindow(), marker, i;
-
-		    // Loop through our array of markers & place each one on the map
-		    for( i = 0; i < markers.length; i++ ) {
-		        var position = new google.maps.LatLng(markers[i][1], markers[i][2]);
-		        bounds.extend(position);
-		        marker = new google.maps.Marker({
-		            position: position,
-		            map: map,
-		            title: markers[i][0]
-		        });
-
-		        // Allow each marker to have an info window
-		        google.maps.event.addListener(marker, 'click', (function(marker, i) {
-		            return function() {
-		                infoWindow.setContent(infoWindowContent[i][0]);
-		                infoWindow.open(map, marker);
-		            }
-		        })(marker, i));
-
-		        // Automatically center the map fitting all markers on the screen
-		        map.fitBounds(bounds);
-		    }
-
-		    // Override our map zoom level once our fitBounds function runs (Make sure it only runs once)
-		    var boundsListener = google.maps.event.addListener((map), 'bounds_changed', function(event) {
-		        //this.setZoom(14);
-		        google.maps.event.removeListener(boundsListener);
-		    });
-		}
+	    for(var i = 0; i < markers.length; i++) {
+	    	var marker = new L.marker([markers[i][1], markers[i][2]]).bindPopup(infoWindowContent[i][0]).addTo(map);
+	    };
 	</script>
 </body>
 </html>
