added speaker resources

--- a/templates/talk-index-template.html
+++ b/templates/talk-index-template.html
@@ -70,6 +70,9 @@
 		.workshop-list .talk-title {
 			font-weight: 600;
 		}
+		.resource-list {
+			padding-left: 1em;
+		}
 		#map_wrapper {
 			height: 400px;
 			margin-top: 1em;
@@ -126,6 +129,15 @@
 			<h2>Workshops</h2>
 			<ul class="workshop-list">
 				$workshoplist
+			</ul>
+		</section>
+		<section id="resources">
+			<h2>Resources</h2>
+			<ul class="resource-list">
+				<li><a href="KevinGoldsmithSpeakerPhoto.jpg">Photo</a></li>
+				<li><a href="KevinGoldsmithSpeakerBioLong.txt">Speaker Bio (889 characters)</a></li>
+				<li><a href="KevinGoldsmithSpeakerBioMedium.txt">Speaker Bio (453 characters)</a></li>
+				<li><a href="KevinGoldsmithSpeakerBioShort.txt">Speaker Bio (259 characters)</a></li>
 			</ul>
 		</section>
 	<!-- end #mainContent -->
