Add Book Me Page, modernizr

--- a/templates/talk-page-template.html
+++ b/templates/talk-page-template.html
@@ -35,7 +35,7 @@
 		</nav>
 	</header>
 	<main id="content">
-		<div><a href="$talkroot">talks></a></div>
+		<div><a href="$talkroot">< talks</a></div>
 		<h1 id="talktitle">$talktitle</h1>
 		$photo
 		<div id="description">
