--- a/templates/talk-index-template.html
+++ b/templates/talk-index-template.html
@@ -70,6 +70,12 @@
 		.workshop-list .talk-title {
 			font-weight: 600;
 		}
+		.no-js #map_wrapper {
+			height: 0px;
+			margin-top: 0em;
+    		margin-bottom: 0em;
+			visibility: hidden;
+		}
 		#map_wrapper {
 			height: 400px;
 			margin-top: 1em;
@@ -136,6 +142,7 @@
 	<footer>
 		kevingoldsmith.com
 	</footer>
+	<script src="../js/modernizr.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="../js/googleevents.js"></script>
 	<script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js" integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q==" crossorigin=""></script>
